// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFont Component IconFont render width viewBox 1`] = `
<View>
  <ARTSurfaceView
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          null,
          Object {
            "transform": Array [
              Object {
                "rotateY": "180deg",
              },
            ],
          },
        ],
        Object {
          "height": 24,
          "width": 24,
        },
      ]
    }
  >
    <ARTShape
      d={
        Array [
          0,
          651.642,
          662.794,
          2,
          444.802,
          662.794,
          2,
          444.802,
          466.19399999999996,
          3,
          454.35900000000004,
          475.751,
          466.64700000000005,
          483.77099999999996,
          481.665,
          490.25699999999995,
          3,
          496.683,
          496.74199999999996,
          513.408,
          499.98499999999996,
          531.839,
          499.98499999999996,
          3,
          567.336,
          499.98499999999996,
          596.177,
          489.06299999999993,
          618.364,
          467.21899999999994,
          3,
          640.5500000000001,
          445.3739999999999,
          651.643,
          413.29099999999994,
          651.643,
          370.9669999999999,
          2,
          651.643,
          182.55899999999994,
          3,
          651.643,
          157.98399999999995,
          647.3770000000001,
          136.13999999999993,
          638.8430000000001,
          117.02499999999993,
          3,
          630.3090000000001,
          97.90999999999994,
          618.8760000000001,
          81.52799999999993,
          604.541,
          67.87499999999994,
          3,
          590.206,
          54.221999999999944,
          573.6510000000001,
          43.81199999999994,
          554.879,
          36.64499999999994,
          3,
          536.106,
          29.477999999999938,
          516.48,
          25.892999999999937,
          496.00100000000003,
          25.892999999999937,
          3,
          475.52200000000005,
          25.892999999999937,
          455.89700000000005,
          29.476999999999936,
          437.12300000000005,
          36.64499999999994,
          3,
          418.35,
          43.81299999999994,
          401.79600000000005,
          54.22299999999994,
          387.46100000000007,
          67.87499999999994,
          3,
          373.1260000000001,
          81.52799999999995,
          361.6910000000001,
          97.91099999999994,
          353.15900000000005,
          117.02499999999995,
          3,
          344.62600000000003,
          136.13899999999995,
          340.35900000000004,
          157.98299999999995,
          340.35900000000004,
          182.55899999999997,
          2,
          340.35900000000004,
          213.27799999999996,
          2,
          444.80300000000005,
          213.27799999999996,
          2,
          444.80300000000005,
          186.65499999999997,
          3,
          444.80300000000005,
          168.90699999999998,
          449.75300000000004,
          155.08299999999997,
          459.65000000000003,
          145.18399999999997,
          3,
          469.54800000000006,
          135.28599999999997,
          482.348,
          130.33699999999996,
          498.04900000000004,
          130.33699999999996,
          3,
          513.75,
          130.33699999999996,
          525.8670000000001,
          135.11599999999996,
          534.4000000000001,
          144.67199999999997,
          3,
          542.9330000000001,
          154.22899999999996,
          547.2,
          167.53999999999996,
          547.2,
          184.60699999999997,
          2,
          547.2,
          355.60799999999995,
          3,
          547.2,
          369.9429999999999,
          542.5920000000001,
          382.23099999999994,
          533.3760000000001,
          392.47099999999995,
          3,
          524.1600000000001,
          402.71099999999996,
          512.3850000000001,
          407.83099999999996,
          498.0490000000001,
          407.83099999999996,
          3,
          489.17500000000007,
          407.83099999999996,
          481.6660000000001,
          406.29499999999996,
          475.5220000000001,
          403.22299999999996,
          3,
          469.3780000000001,
          400.15099999999995,
          464.2580000000001,
          396.56699999999995,
          460.1620000000001,
          392.47099999999995,
          3,
          456.0660000000001,
          388.37499999999994,
          452.82400000000007,
          383.93799999999993,
          450.4340000000001,
          379.15999999999997,
          3,
          448.0450000000001,
          374.381,
          446.16800000000006,
          370.62699999999995,
          444.8020000000001,
          367.89599999999996,
          2,
          352.6460000000001,
          367.89599999999996,
          2,
          352.6460000000001,
          761.095,
          2,
          651.642,
          761.095,
          2,
          651.642,
          662.7950000000001,
          1,
        ]
      }
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={
        Array [
          0,
          0,
          0,
          1,
        ]
      }
      strokeCap={1}
      strokeDash={
        Array [
          0,
          0,
        ]
      }
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          0.0234375,
          0,
          0,
          -0.0234375,
          0,
          21,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`IconFont Component basic render 1`] = `
<View>
  <ARTSurfaceView
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          null,
          Object {},
        ],
        Object {
          "height": 16,
          "width": 16,
        },
      ]
    }
  >
    <ARTShape
      d={
        Array [
          0,
          651.642,
          662.794,
          2,
          444.802,
          662.794,
          2,
          444.802,
          466.19399999999996,
          3,
          454.35900000000004,
          475.751,
          466.64700000000005,
          483.77099999999996,
          481.665,
          490.25699999999995,
          3,
          496.683,
          496.74199999999996,
          513.408,
          499.98499999999996,
          531.839,
          499.98499999999996,
          3,
          567.336,
          499.98499999999996,
          596.177,
          489.06299999999993,
          618.364,
          467.21899999999994,
          3,
          640.5500000000001,
          445.3739999999999,
          651.643,
          413.29099999999994,
          651.643,
          370.9669999999999,
          2,
          651.643,
          182.55899999999994,
          3,
          651.643,
          157.98399999999995,
          647.3770000000001,
          136.13999999999993,
          638.8430000000001,
          117.02499999999993,
          3,
          630.3090000000001,
          97.90999999999994,
          618.8760000000001,
          81.52799999999993,
          604.541,
          67.87499999999994,
          3,
          590.206,
          54.221999999999944,
          573.6510000000001,
          43.81199999999994,
          554.879,
          36.64499999999994,
          3,
          536.106,
          29.477999999999938,
          516.48,
          25.892999999999937,
          496.00100000000003,
          25.892999999999937,
          3,
          475.52200000000005,
          25.892999999999937,
          455.89700000000005,
          29.476999999999936,
          437.12300000000005,
          36.64499999999994,
          3,
          418.35,
          43.81299999999994,
          401.79600000000005,
          54.22299999999994,
          387.46100000000007,
          67.87499999999994,
          3,
          373.1260000000001,
          81.52799999999995,
          361.6910000000001,
          97.91099999999994,
          353.15900000000005,
          117.02499999999995,
          3,
          344.62600000000003,
          136.13899999999995,
          340.35900000000004,
          157.98299999999995,
          340.35900000000004,
          182.55899999999997,
          2,
          340.35900000000004,
          213.27799999999996,
          2,
          444.80300000000005,
          213.27799999999996,
          2,
          444.80300000000005,
          186.65499999999997,
          3,
          444.80300000000005,
          168.90699999999998,
          449.75300000000004,
          155.08299999999997,
          459.65000000000003,
          145.18399999999997,
          3,
          469.54800000000006,
          135.28599999999997,
          482.348,
          130.33699999999996,
          498.04900000000004,
          130.33699999999996,
          3,
          513.75,
          130.33699999999996,
          525.8670000000001,
          135.11599999999996,
          534.4000000000001,
          144.67199999999997,
          3,
          542.9330000000001,
          154.22899999999996,
          547.2,
          167.53999999999996,
          547.2,
          184.60699999999997,
          2,
          547.2,
          355.60799999999995,
          3,
          547.2,
          369.9429999999999,
          542.5920000000001,
          382.23099999999994,
          533.3760000000001,
          392.47099999999995,
          3,
          524.1600000000001,
          402.71099999999996,
          512.3850000000001,
          407.83099999999996,
          498.0490000000001,
          407.83099999999996,
          3,
          489.17500000000007,
          407.83099999999996,
          481.6660000000001,
          406.29499999999996,
          475.5220000000001,
          403.22299999999996,
          3,
          469.3780000000001,
          400.15099999999995,
          464.2580000000001,
          396.56699999999995,
          460.1620000000001,
          392.47099999999995,
          3,
          456.0660000000001,
          388.37499999999994,
          452.82400000000007,
          383.93799999999993,
          450.4340000000001,
          379.15999999999997,
          3,
          448.0450000000001,
          374.381,
          446.16800000000006,
          370.62699999999995,
          444.8020000000001,
          367.89599999999996,
          2,
          352.6460000000001,
          367.89599999999996,
          2,
          352.6460000000001,
          761.095,
          2,
          651.642,
          761.095,
          2,
          651.642,
          662.7950000000001,
          1,
        ]
      }
      fill={
        Array [
          0,
          0,
          0,
          0,
          1,
        ]
      }
      opacity={1}
      stroke={
        Array [
          0,
          0,
          0,
          1,
        ]
      }
      strokeCap={1}
      strokeDash={
        Array [
          0,
          0,
        ]
      }
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          0.015625,
          0,
          0,
          -0.015625,
          0,
          14,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;
